  solvers2.tgz:  pfghread.c:  fix a glitch with atan2:  the cases for
atan2(const,varexpr) and atan2(varexpr,const) were interchanged.

20201030
  solvers.tgz: pshvprod.c: supply a missing return statement to
hvpcompse_ASL().
  solvers.tgz and solvers2.tgz:  export report_where again:  yesterday
it became file static in repwhere.c, but some solvers call it.
  solvers.tgz: fix a glitch in pfghread.c (assignment for p.Hvcompde).

20201107
  solvers.tgz:  asl.h fg_read.c fgh_read.c pfg_read.c:  add new field
nvinc to struct Edaginfo, for use in mqpcheckv.c and nqpcheck.c;
mqpcheckv.c and nqpcheck.c:  use asl->I.nvinc rather than trying to
compute nvinc from values that could have been changed by sos_add(),
and use asl->i.n_var0 at one point rather than the possibly changed
n_var.  The solvers2.tgz versions of mqpcheckv.c and nqpcheck.c work
differently and do not use nvinc.

20201113
  solvers.tgz: fix a bug in conpval.c that silently crept in during
the updates of 20201029.  Line 752 should be
		deriv_errchk_ASL((ASL*)asl, i, 1, 1);
but "deriv_errchk_ASL" somehow got removed.  This call is for
printing an error message when a constraint body but not its
derivative can be computed.

20210327
  solvers.tgz and solvers2.tgz: mpec_adj.c:  fix an obscure bug
that could cause a fault on some complementarity problems.

20210410
  eval2.c, pfghread.c, pshvprod.c, sphes.c:  fix some obscure bugs with
Hessian computations, such as certain if-then-else expressions.

20210613
  indic_cons.c (for function indicator_constrs_ASL):  in solvers.tgz,
flx a possible fault and provide a missing nvinc adjustment for defined
variables; in solvers2.tgz, add missing code for defined variables
used in just one constraint.

20210819
  mqcheckv.c in both solvers.tgz and solvers2.tgz:  fix a bug
involving a defined variable that references another defined variable
and that is shared by two or more objectives or constraints.  In the
example that exposed the bug, the solver faulted.