@@ -9,7 +9,7 @@ arithchk.c	63b0185	6532
 asl.h	1fe3527a	42925
 asl_pfg.h	6483336	1268
 asl_pfgh.h	49b5a53	1288
-asldate.c	577c1df	29
+asldate.c	e9f2513f	29
 atof.c	1fabc7d3	1747
 auxinfo.c	1a3c8690	1488
 avltree.c	10aeaa58	11346
@@ -59,7 +59,7 @@ funcaddr.c	fc16b89a	1197
 g_fmt.c	642f235	3141
 genrowno.c	1a8171dc	1805
 getenv.c	e86c81a2	1466
-getstub.c	e9500d8b	13223
+getstub.c	e05acb35	13344
 getstub.h	f626e91d	7079
 htcl.c	6522bee	2279
 indic_cons.c	f1f99a7c	13970
@@ -82,13 +82,13 @@ mip_pri.c	f1dd1d47	7887
 misc.c	11214d99	31518
 mpec_adj.c	f15f4697	9223
 mpec_adj0.c	efb8be74	70
-mqpcheckv.c	1018fd10	19786
+mqpcheckv.c	e5df5746	19816
 mypow.c	f6f74614	2464
 names.c	1fc87a42	4343
 nl_obj.c	e8fa1e1	2560
 nlp.h	10ba87d3	5384
 nlp2.h	fcdcbc2a	7126
-nqpcheck.c	eba6059d	18241
+nqpcheck.c	c5dec57	18271
 nqpcheckZ.c	ea215f98	1188
 obj2val.c	e939c11	4492
 obj_adj.c	1c990cd0	17623
